--- a/FIASUpdate/FIASUpdate.csproj
+++ b/FIASUpdate/FIASUpdate.csproj
@@ -79,6 +79,18 @@
   <PropertyGroup>
     <ApplicationIcon>Resources\FIAS_Icon.ico</ApplicationIcon>
   </PropertyGroup>
+  <PropertyGroup>
+    <SignManifests>false</SignManifests>
+  </PropertyGroup>
+  <PropertyGroup>
+    <TargetZone>LocalIntranet</TargetZone>
+  </PropertyGroup>
+  <PropertyGroup>
+    <GenerateManifests>true</GenerateManifests>
+  </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationManifest>Properties\app.manifest</ApplicationManifest>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="Azure.Core, Version=1.28.0.0, Culture=neutral, PublicKeyToken=92742159e12e44c8, processorArchitecture=MSIL">
       <HintPath>..\packages\Azure.Core.1.28.0\lib\net461\Azure.Core.dll</HintPath>
@@ -358,6 +370,14 @@
     <Compile Include="DBCreate.cs" />
     <Compile Include="DBImport.cs" />
     <Compile Include="DBImportDelta.cs" />
+    <Compile Include="Extensions\DataExtensions.cs" />
+    <Compile Include="Extensions\StringExtensions.cs" />
+    <Compile Include="Forms\FormDictionaryView.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\FormDictionaryView.Designer.cs">
+      <DependentUpon>FormDictionaryView.cs</DependentUpon>
+    </Compile>
     <Compile Include="Models\ImportOptions.cs" />
     <Compile Include="Models\FIASArchiveItem.cs" />
     <Compile Include="Forms\FormAbout.cs">
@@ -384,7 +404,6 @@
       <DependentUpon>icons8.resx</DependentUpon>
     </Compile>
     <Compile Include="Models\DBStringItem.cs" />
-    <Compile Include="Extensions.cs" />
     <Compile Include="Models\FIASArchive.cs" />
     <Compile Include="FIASProperties.cs" />
     <Compile Include="Properties\Settings.cs" />
@@ -433,6 +452,9 @@
     <EmbeddedResource Include="FormMain.resx">
       <DependentUpon>FormMain.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Forms\FormDictionaryView.resx">
+      <DependentUpon>FormDictionaryView.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Forms\FormImportDelta.resx">
       <DependentUpon>FormImportDelta.cs</DependentUpon>
     </EmbeddedResource>
@@ -454,6 +476,7 @@
       <DesignTime>True</DesignTime>
     </Compile>
     <None Include="packages.config" />
+    <None Include="Properties\app.manifest" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -498,14 +521,17 @@
   <ItemGroup>
     <Content Include="Resources\icons8\Add16.png" />
     <Content Include="Resources\icons8\Cancel16.png" />
+    <Content Include="Resources\icons8\Clipboard16.png" />
     <Content Include="Resources\icons8\Info16.png" />
     <Content Include="Resources\icons8\Minus16.png" />
     <Content Include="Resources\icons8\Ok16.png" />
     <Content Include="Resources\icons8\OpenedFolder16.png" />
+    <Content Include="Resources\icons8\PDF16.png" />
     <Content Include="Resources\icons8\PencilDrawing16.png" />
     <Content Include="Resources\icons8\Replace16.png" />
     <Content Include="Resources\icons8\Save16.png" />
     <Content Include="Resources\icons8\Search16.png" />
+    <Content Include="Resources\icons8\TableProperties16.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\Microsoft.Data.SqlClient.SNI.5.0.1\build\net46\Microsoft.Data.SqlClient.SNI.targets" Condition="Exists('..\packages\Microsoft.Data.SqlClient.SNI.5.0.1\build\net46\Microsoft.Data.SqlClient.SNI.targets')" />
