--- a/.github/workflows/build-artifact.yml
+++ b/.github/workflows/build-artifact.yml
@@ -24,12 +24,12 @@ jobs:
       version: ${{steps.version.outputs.version}}
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
           fetch-depth: 0
 
       - name: Install .NET Core
-        uses: actions/setup-dotnet@v3
+        uses: actions/setup-dotnet@v4
         with:
           dotnet-version: 6.x
 
@@ -38,7 +38,7 @@ jobs:
         run: .\.github\scripts\version.ps1
 
       - name: Setup MSBuild
-        uses: microsoft/setup-msbuild@v1.1
+        uses: microsoft/setup-msbuild@v2
 
       - name: Restore packages
         run: nuget restore
@@ -48,3 +48,10 @@ jobs:
 
       - name: Build solution
         run: msbuild $env:SolutionName /t:Build /p:Configuration=Release
+
+      - name: Upload artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: FIASUpdate
+          path: FIASUpdate\bin\Release\**
+          if-no-files-found: error
