--- a/FIASUpdate/FIASUpdate.csproj
+++ b/FIASUpdate/FIASUpdate.csproj
@@ -352,12 +352,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ArchiveDownloader.cs" />
-    <Compile Include="Controls\UC_Database.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="Controls\UC_Database.Designer.cs">
-      <DependentUpon>UC_Database.cs</DependentUpon>
-    </Compile>
+    <Compile Include="Controls\TableLVI.cs" />
     <Compile Include="Controls\ToolStripTaskProgress.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -378,6 +373,18 @@
     </Compile>
     <Compile Include="Forms\FormDictionaryView.Designer.cs">
       <DependentUpon>FormDictionaryView.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\FormOperation.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\FormOperation.Designer.cs">
+      <DependentUpon>FormOperation.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\FormSettings.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\FormSettings.Designer.cs">
+      <DependentUpon>FormSettings.cs</DependentUpon>
     </Compile>
     <Compile Include="Models\ImportOptions.cs" />
     <Compile Include="Models\FIASArchiveItem.cs" />
@@ -434,9 +441,6 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SyncEvent.cs" />
     <Compile Include="Readers\XMLDataReader.cs" />
-    <EmbeddedResource Include="Controls\UC_Database.resx">
-      <DependentUpon>UC_Database.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="Controls\UC_DatabaseInfo.resx">
       <DependentUpon>UC_DatabaseInfo.cs</DependentUpon>
     </EmbeddedResource>
@@ -460,6 +464,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\FormImportFull.resx">
       <DependentUpon>FormImportFull.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\FormOperation.resx">
+      <DependentUpon>FormOperation.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\FormSettings.resx">
+      <DependentUpon>FormSettings.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="icons8.resx">
       <Generator>ResXFileCodeGenerator</Generator>
