--- a/FIASUpdate/FIASUpdate.csproj
+++ b/FIASUpdate/FIASUpdate.csproj
@@ -539,6 +539,7 @@
     <Content Include="Resources\icons8\Cancel16.png" />
     <Content Include="Resources\icons8\Clipboard16.png" />
     <Content Include="Resources\icons8\Info16.png" />
+    <Content Include="Resources\icons8\Internet16.png" />
     <Content Include="Resources\icons8\Minus16.png" />
     <Content Include="Resources\icons8\Ok16.png" />
     <Content Include="Resources\icons8\OpenedFolder16.png" />
@@ -547,6 +548,7 @@
     <Content Include="Resources\icons8\Replace16.png" />
     <Content Include="Resources\icons8\Save16.png" />
     <Content Include="Resources\icons8\Search16.png" />
+    <Content Include="Resources\icons8\Settings16.png" />
     <Content Include="Resources\icons8\TableProperties16.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
