--- a/FIASUpdate/packages.config
+++ b/FIASUpdate/packages.config
@@ -1,22 +1,22 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Azure.Core" version="1.40.0" targetFramework="net472" />
-  <package id="Azure.Identity" version="1.11.4" targetFramework="net472" />
+  <package id="Azure.Identity" version="1.12.0" targetFramework="net472" />
   <package id="DataConnectionDialog" version="1.2" targetFramework="net472" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="8.0.0" targetFramework="net472" />
-  <package id="Microsoft.Data.SqlClient" version="5.2.1" targetFramework="net472" />
-  <package id="Microsoft.Data.SqlClient.SNI" version="5.2.0" targetFramework="net472" />
+  <package id="Microsoft.Data.SqlClient" version="5.0.2" allowedVersions="(,5.0.2]" targetFramework="net472" />
+  <package id="Microsoft.Data.SqlClient.SNI" version="5.0.1" allowedVersions="(,5.0.1]" targetFramework="net472" />
   <package id="Microsoft.Identity.Client" version="4.61.3" targetFramework="net472" />
   <package id="Microsoft.Identity.Client.Extensions.Msal" version="4.61.3" targetFramework="net472" />
-  <package id="Microsoft.IdentityModel.Abstractions" version="7.6.0" targetFramework="net472" />
-  <package id="Microsoft.IdentityModel.JsonWebTokens" version="7.6.0" targetFramework="net472" />
-  <package id="Microsoft.IdentityModel.Logging" version="7.6.0" targetFramework="net472" />
-  <package id="Microsoft.IdentityModel.Protocols" version="7.6.0" targetFramework="net472" />
-  <package id="Microsoft.IdentityModel.Protocols.OpenIdConnect" version="7.6.0" targetFramework="net472" />
-  <package id="Microsoft.IdentityModel.Tokens" version="7.6.0" targetFramework="net472" />
+  <package id="Microsoft.IdentityModel.Abstractions" version="7.6.2" targetFramework="net472" />
+  <package id="Microsoft.IdentityModel.JsonWebTokens" version="7.6.2" targetFramework="net472" />
+  <package id="Microsoft.IdentityModel.Logging" version="7.6.2" targetFramework="net472" />
+  <package id="Microsoft.IdentityModel.Protocols" version="7.6.2" targetFramework="net472" />
+  <package id="Microsoft.IdentityModel.Protocols.OpenIdConnect" version="7.6.2" targetFramework="net472" />
+  <package id="Microsoft.IdentityModel.Tokens" version="7.6.2" targetFramework="net472" />
   <package id="Microsoft.SqlServer.Assessment" version="1.1.17" targetFramework="net472" />
   <package id="Microsoft.SqlServer.Assessment.Authoring" version="1.1.0" targetFramework="net472" />
-  <package id="Microsoft.SqlServer.SqlManagementObjects" version="171.30.0" targetFramework="net472" />
+  <package id="Microsoft.SqlServer.SqlManagementObjects" version="170.13.0" targetFramework="net472" />
   <package id="Microsoft-WindowsAPICodePack-Core" version="1.1.5" targetFramework="net472" />
   <package id="Microsoft-WindowsAPICodePack-Shell" version="1.1.5" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net472" />
@@ -24,7 +24,7 @@
   <package id="System.ClientModel" version="1.0.0" targetFramework="net472" />
   <package id="System.Configuration.ConfigurationManager" version="8.0.0" targetFramework="net472" />
   <package id="System.Diagnostics.DiagnosticSource" version="8.0.1" targetFramework="net472" />
-  <package id="System.IdentityModel.Tokens.Jwt" version="7.6.0" targetFramework="net472" />
+  <package id="System.IdentityModel.Tokens.Jwt" version="7.6.2" targetFramework="net472" />
   <package id="System.IO" version="4.3.0" targetFramework="net472" />
   <package id="System.IO.FileSystem.AccessControl" version="5.0.0" targetFramework="net472" />
   <package id="System.Memory" version="4.5.5" targetFramework="net472" />
